syntax = "proto3";

option java_package = "com.trendingmoviesservice.protobuf";
option java_outer_classname = "TrendingProto";

package com.trendingmoviesservice.protobuf;


service TrendingMoviesService {
    rpc GetTopMoviesByRating (TopMoviesRequest) returns (TopMoviesResponse);
}

message TopMoviesRequest {
    int32 limit = 1;
}

message TopMoviesResponse {
    repeated Movie top_movies = 1;
}

message Movie {
    string movieId = 1;
    double rating = 2;
}
